--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <h2 class="mb-5 pb-4">Teaching</h2>
             <div class="row">
                 <div class="col-12">
-                    <h3 class="mb-4">Thesis Co-Advisor</h3>
+                    <h3 class="mb-4">Thesis Co-Advisor 📕</h3>
                     
                     <!-- Current Academic Year -->
                     <div class="mb-5">
