--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                 
             </ul>
             <div class="header-content">
-                <h4 class="header-subtitle" >Welcome 🙂</h4>
-                <h1 class="header-subtitle">I am Giuseppe De Rosa</h1>
+                <h1 class="header-subtitle">Giuseppe De Rosa</h1>
                 <a href="resume.pdf" download class="btn btn-primary btn-rounded" style="display: inline-flex; align-items: center; gap: 8px;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/>
